fix responsive css wwrap item list

--- a/00-GROUP-CHALLENGE/05-recypefy/recipefy/src/components/ListItemRecipe.css
+++ b/00-GROUP-CHALLENGE/05-recypefy/recipefy/src/components/ListItemRecipe.css
@@ -7,4 +7,5 @@ img {
 .recipe-list__item {
     display: flex;
     flex-direction: column;
+    margin: 5px
 }
